--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "three": "^0.151.3",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
   },
